--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -52,6 +52,7 @@ table {
     box-sizing: border-box;
 }
 
+
 html, body {
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
@@ -64,3 +65,49 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+
+/* Navigation Bar */
+nav a {
+	display: inline-block;
+	width: 9%;
+	color: lightgrey;
+	padding-top: 40px;
+	
+}
+img.logo{
+	display: inline-block;
+	width: 20%;
+	margin-left: 60%;
+	margin-top: 1%;
+	text-align: center;
+	height: 20px;
+}
+/* Header */
+h1{
+	display: inline-block;
+	width: 5%;
+	padding: 3%;
+	font-size: 50px;
+	margin-bottom: 5px;
+	
+}
+.button{
+	font-size: 50px;
+	margin-left: 30px;
+	margin-top: px;
+}
+div .header{
+	display: inline-block;
+}
+img .Code{
+	display: inline-block;
+}
+/* First Section */
+
+#secondSection .Contanier div{
+	text-align:center;
+	width:25%;
+	display:inline-block;
+	margin:0 3.5%;
+}
