--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -84,30 +84,79 @@ img.logo{
 	height: 20px;
 }
 /* Header */
+header{
+	width: 10%
+	margin: 0 auto;
+	padding: 90px;
+}
+.Container{
+	padding: 20%;
+	margin: 0 auto;
+}
 h1{
 	display: inline-block;
-	width: 5%;
-	padding: 3%;
 	font-size: 50px;
-	margin-bottom: 5px;
-	
+		
 }
 .button{
 	font-size: 50px;
 	margin-left: 30px;
 	margin-top: px;
 }
-div .header{
-	display: inline-block;
-}
-img .Code{
-	display: inline-block;
-}
-/* First Section */
 
-#secondSection .Contanier div{
-	text-align:center;
-	width:25%;
+.Code{
+	display: inline-block;
+	width: 20%;
+}
+
+/* First Section */
+.firstbox{
 	display:inline-block;
-	margin:0 3.5%;
+	width: 40%;
+	padding: 10%;
+}
+.secondbox{
+	display:inline-block;
+	width: 40%;
+	padding: 10%;
+}
+
+/* Second Section*/
+
+.middle-img{
+	width: 100%;
+
+}
+
+/* Third Section */
+
+.ThirdSection{
+	height: 200px;
+}
+
+.One{
+	display:inline-block;
+	width: 30%;
+	padding: 50px;
+}
+.Two{
+	display:inline-block;
+	width: 30%;
+	padding: 50px;
+}
+.Three{
+	display:inline-block;
+	width: 30%;
+	padding 50px;
+}
+#Contact{
+	padding: 50px;
+	border-top: 3px black solid;
+	line-height: 20pt;
+}
+
+/*Footer*/
+
+footer{
+	text-align: center;
 }
