--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -84,17 +84,20 @@ img.logo{
 	height: 20px;
 }
 /* Header */
-header{
-	width: 10%
-	margin: 0 auto;
-	padding: 90px;
-}
-.Container{
-	padding: 20%;
-	margin: 0 auto;
-}
-h1{
+
+.LeftHalf{
 	display: inline-block;
+	width: 50%
+	margin: 0 auto;
+	
+}
+.RightHalf{
+	display: inline-block;
+	width: 50%;
+	margin: 0 auto;
+	border: 50px;
+} 
+h1{
 	font-size: 50px;
 		
 }
@@ -103,12 +106,6 @@ h1{
 	margin-left: 30px;
 	margin-top: px;
 }
-
-.Code{
-	display: inline-block;
-	width: 20%;
-}
-
 /* First Section */
 .firstbox{
 	display:inline-block;
