--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -68,7 +68,12 @@ h1, h2, h3, h4, h5 {
 
 
 /* Navigation Bar */
+nav{
+	border-left: 3%;
+}
+
 nav a {
+	font-family: 'Modak', cursive;
 	display: inline-block;
 	width: 9%;
 	color: lightgrey;
@@ -87,15 +92,15 @@ img.logo{
 
 .LeftHalf{
 	display: inline-block;
-	width: 50%
-	margin: 0 auto;
+	width: 40%;
+	margin-left: 5%;
 	
 }
 .RightHalf{
 	display: inline-block;
 	width: 50%;
-	margin: 0 auto;
-	border: 50px;
+	margin-top: 5%;
+	border: 40px;
 } 
 h1{
 	font-size: 50px;
@@ -144,7 +149,7 @@ h1{
 .Three{
 	display:inline-block;
 	width: 30%;
-	padding 50px;
+	padding: 50px;
 }
 #Contact{
 	padding: 50px;
